--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
 
     <!-- Opening copy -->
     <p class="lead-small"
-       data-lang-nl="Kom naar onze feestelijke opening. RSVP en we zetten je op de guestlist voor een gratis drankje."
-       data-lang-en="Join our festive opening. RSVP to be added to the guestlist and enjoy a free drink.">
+       data-lang-nl="Vitrien opent feestelijk met installaties, performances, rondleidingen en cocktails. ledereen welkom, gratis toegang. RSVP en we zetten je op de guestlist voor een gratis drankje."
+       data-lang-en="Vitrien opens festively with installations, performances, guided tours and cocktails. Free and open to all. RSVP to be added to the guestlist and enjoy a free drink.">
       Kom naar onze feestelijke opening. RSVP en we zetten je op de guestlist voor een gratis drankje.
     </p>
 
