--- a/index.html
+++ b/index.html
@@ -92,12 +92,13 @@
           Vitrien is een nomadisch kunstinitiatief dat onverwachte of leegstaande plekken in de stad tijdelijk activeert met unieke tentoonstellingen. Kunst verschijnt waar je het niet verwacht: in winkelruiten, leegstaande panden of zelfs in een parkeergarage. Zo wordt de straat zelf een galerij.
         </p>
     
-        <a class="button team-button"
-           href="paginas/team"
-           data-lang-nl="Ontmoet het team"
-           data-lang-en="Meet the team">
-          Ontmoet het team
-        </a>
+        <a class="btn btn-primary"
+   href="paginas/team"
+   data-lang-nl="Ontmoet het team"
+   data-lang-en="Meet the team">
+  Ontmoet het team
+</a>
+
       </div>
     </section>
 
