--- a/paginas/team.html
+++ b/paginas/team.html
@@ -84,11 +84,11 @@
 
         <p class="team-intro">
           Vitrien bestaat door het werk van
-          <a href="#aya" class="team-name mono-link" data-target="aya">Aya</a>,
-          <a href="#joseph" class="team-name mono-link" data-target="joseph">Joseph</a>,
-          <a href="#thomas" class="team-name mono-link" data-target="thomas">Thomas</a>,
-          <a href="#arthur" class="team-name mono-link" data-target="arthur">Arthur</a> en
-          <a href="#judith" class="team-name mono-link" data-target="judith">Judith</a>,
+          <a href="#aya" class="team-name" data-target="aya">Aya</a>,
+          <a href="#joseph" class="team-name" data-target="joseph">Joseph</a>,
+          <a href="#thomas" class="team-name" data-target="thomas">Thomas</a>,
+          <a href="#arthur" class="team-name" data-target="arthur">Arthur</a> en
+          <a href="#judith" class="team-name" data-target="judith">Judith</a>,
           en door de onmisbare steun van Georgy, vrienden, familie &amp; vrijwilligers.
         </p>
 
