--- a/index.html
+++ b/index.html
@@ -194,12 +194,13 @@
   <summary style="display:none"></summary> <!-- verbergt de standaard 'Details'-knop -->
   <div class="program-schedule">
 
-
     <div class="program-block">
       <time>15:00</time>
       <div>
         <strong data-lang-nl="Deuren open" data-lang-en="Doors open">Deuren open</strong><br>
-        <span data-lang-nl="Expo start in de vitrines" data-lang-en="Exhibition starts in the windows">Expo start in de vitrines</span>
+        <span data-lang-nl="Cocktailbar open in Huis Delsart" data-lang-en="Cocktail bar opens at Huis Delsart">
+          Cocktailbar open in Huis Delsart
+        </span>
       </div>
     </div>
 
@@ -207,36 +208,57 @@
       <time>15:30</time>
       <div>
         <strong data-lang-nl="Welkom & speeches" data-lang-en="Welcome & speeches">Welkom & speeches</strong><br>
-        <span data-lang-nl="Intro kunstenaars & performances" data-lang-en="Intro to artists & performances">Intro kunstenaars & performances</span>
+        <span data-lang-nl="Intro kunstenaars & performances" data-lang-en="Intro to artists & performances">
+          Intro kunstenaars & performances
+        </span>
       </div>
     </div>
 
     <div class="program-block">
       <time>15:50</time>
-      <div><strong>Performance — Niels Poiz</strong></div>
+      <div>
+        <strong data-lang-nl="Performance — Niels Poiz" data-lang-en="Performance — Niels Poiz">
+          Performance — Niels Poiz
+        </strong>
+      </div>
     </div>
 
     <div class="program-block">
       <time>16:30 & 18:00</time>
-      <div><strong data-lang-nl="Rondleidingen" data-lang-en="Guided tours">Rondleidingen</strong></div>
+      <div>
+        <strong data-lang-nl="Rondleidingen" data-lang-en="Guided tours">Rondleidingen</strong>
+      </div>
     </div>
 
     <div class="program-block">
       <time>19:30</time>
-      <div><strong data-lang-nl="Speeches" data-lang-en="Speeches">Speeches</strong></div>
+      <div>
+        <strong data-lang-nl="Welkom & speeches" data-lang-en="Welcome & speeches">Welkom & speeches</strong><br>
+        <span data-lang-nl="Intro kunstenaars & performances" data-lang-en="Intro to artists & performances">
+          Intro kunstenaars & performances
+        </span>
+      </div>
     </div>
 
     <div class="program-block">
       <time>19:50</time>
-      <div><strong>Performance — Camille Lemille</strong></div>
+      <div>
+        <strong data-lang-nl="Performance — Nog aan te kondigen" data-lang-en="Performance — Artist to be announced">
+          Performance — Nog aan te kondigen
+        </strong>
+      </div>
     </div>
 
     <div class="program-block">
       <time>20:30</time>
-      <div><strong data-lang-nl="Avondtour & DJ" data-lang-en="Evening tour & DJ">Avondtour & DJ</strong></div>
+      <div>
+        <strong data-lang-nl="DJ & rondleidingen" data-lang-en="DJ & guided tours">DJ & rondleidingen</strong>
+      </div>
     </div>
+
   </div>
 </details>
+
 
   </div>
 </section>
