--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     <div class="program-block">
       <time>20:30</time>
       <div>
-        <strong data-lang-nl="DJ & rondleidingen" data-lang-en="DJ & guided tours">DJ & rondleidingen</strong>
+        <strong data-lang-nl="DJ & Rondleidingen" data-lang-en="DJ & Guided tours">DJ & Rondleidingen</strong>
       </div>
     </div>
 
